--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slider": "^1.3.0",
+    "rxjs": "^7.1.0",
     "styled-components": "^5.3.0"
   },
   "scripts": {
